[gd_scene load_steps=4 format=3 uid="uid://c4ydtsnj3uugl"]

[ext_resource type="Script" uid="uid://bhj6w8q75gaqx" path="res://Scripts/main_menu.gd" id="1_28flt"]
[ext_resource type="FontFile" uid="uid://djnp2gqfshokt" path="res://Other/VCR_OSD_MONO_1.001.ttf" id="2_48xlc"]

[sub_resource type="LabelSettings" id="LabelSettings_1ehe0"]
font = ExtResource("2_48xlc")
font_size = 50

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_28flt")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 207.0
offset_bottom = 151.0

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 20.0
offset_right = 1085.0
offset_bottom = 277.0
text = "TEN NIGHT'S AT ASIA'S"
label_settings = SubResource("LabelSettings_1ehe0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 225.0
offset_top = 158.0
offset_right = 522.0
offset_bottom = 395.0
scale = Vector2(2.342247, 2.342247)
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START"

[node name="TutorialButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "TUTORIAL"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT"
